<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.wright.gameoflife2.GameOfLifeActivity">
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/action_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fill"
        android:orderInCategory="100"
        android:title="@string/action_fill_random"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_color_alive"
        android:orderInCategory="100"
        android:title="@string/action_change_color_alive"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/action_color_red"
                android:orderInCategory="100"
                android:title="@string/action_color_red"
                app:showAsAction="never" >
            </item>

            <item
                android:id="@+id/action_color_blue"
                android:orderInCategory="100"
                android:title="@string/action_color_blue"
                app:showAsAction="never" >
            </item>

        </menu>

    </item>
    <item
        android:id="@+id/action_change_fill_method"
        android:orderInCategory="100"
        android:title="@string/action_change_fill_method"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_fill_method_default"
                android:orderInCategory="100"
                android:title="@string/action_default_fill"
                app:showAsAction="never" >
            </item>

            <item
                android:id="@+id/action_fill_box"
                android:orderInCategory="100"
                android:title="@string/action_box_fill"
                app:showAsAction="never" >
            </item>

        </menu>
    </item>

</menu>